tests/js/success/cfg_if3.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ***************************************************************************** */
var parents = "smiling";
var money = 300000;
var grade = "F";

if (grade == "A") {
  parents = "laugh";
} else if (grade == "B") {
  parents = "ok";
} else if (grade == "C") {
  money = money/5;
} else if (grade == "D") {
  ;;;;;"sigh";;;;
} else if (grade == "F") {
  money = 0;
  parents = "";
}
